# CODE_EF_2D_UPPA

./: .gitignore  404.html  EF_2D_statique.ipynb  LICENSE  README.md  mkdocs.yml  pyproject.toml  structure.txt  test.py
BIB/: exemple_sparse.py  pyproject.toml
assemble_skeleton_face/: index.html
assemble_volume/: index.html
docs/: assemble_skeleton_element.md  assemble_skeleton_face.md  assemble_surface.md  assemble_volume.md  exemple_aeroac_CG.md  exemple_general_CG.md  exemple_helmholtz_CG.md  exemple_helmholtz_sipdg.md  exercices.md  fem.md  guide_utilisation.md  index.md  installation.md  mesh.md  sipdg.md  sparse.md
examples/: example1_laplace.py  example2_poisson.py  exemple_CG.ipynb  exemple_CG_2.py  exemple_CG_aeroac.py  exemple_CG_diffraction_all.py  exemple_CG_diffraction_fourier.py  exemple_DG.ipynb  exemple_DG.py  exemple_SIPDG.py  exemple_assembalge_terme_source_volumique.py  exemple_assemblage_general.py  exemple_assemblage_masse_et_rigidite.py  exemple_assemblage_surface.py  exemple_assemblage_terme_source_volumique.py  exemple_box.ipynb  exemple_box.py  exemple_general_CG.py  exemple_helmholtz_CG.py  exemple_hyperbo.ipynb  exemple_hyperbo.py  exemple_hyperbo_2.py  exemple_matrice_face_dun_triangle_DG.ipynb  exemple_matrice_saut_DG.ipynb  exemple_matrices_locales.ipynb  exemple_mesh.ipynb  exemple_mesh_1.py  exemple_mesh_2.py  exemple_mesh_3.py  exemple_mesh_marquage_frontière.ipynb  exemple_normale_triange.ipynb  exemple_quadrature.ipynb  exemple_sparse.ipynb  exemple_sparse.py
exemple_CG2/: index.html
fem/: index.html
site/: 404.html  (+1 more)
(+44 files in other folders)
